# learn-wgpu

./: .gitignore  .travis.yml  404.html  Cargo.toml  FEATURES.md  LICENSE.md  build-wasm.sh  debug-rd-csv.py  deploy.sh  index.html  index.template.html  package-lock.json  package.json  run-all.sh  todo.html  wasm-targets.json
code/: Cargo.toml
code/beginner/tutorial1-window/: Cargo.toml  index.html  main.rs
code/beginner/tutorial1-window/src/: lib.rs  main.rs
code/beginner/tutorial2-surface/: Cargo.toml  index.html
code/beginner/tutorial2-surface/src/: challenge.rs  lib.rs  main.rs
code/beginner/tutorial2-swapchain/: Cargo.toml  challenge.rs
code/beginner/tutorial2-swapchain/src/: challenge.rs  main.rs
code/beginner/tutorial3-pipeline/: Cargo.toml  challenge.rs  challenge.vert  main.rs
code/beginner/tutorial3-pipeline/src/: challenge.frag  challenge.frag.spv  challenge.rs  challenge.vert  challenge.vert.spv  challenge.wgsl  lib.rs  main.rs  shader.vert.spv  shader.wgsl
code/beginner/tutorial4-buffer/: Cargo.toml  build.rs  challenge.rs  main.rs
code/beginner/tutorial4-buffer/src/: challenge.rs  lib.rs  main.rs  shader.vert.spv  shader.wgsl
code/beginner/tutorial5-textures/: Cargo.toml  build.rs  challenge.rs  main.rs
code/beginner/tutorial5-textures/src/: challenge.rs  lib.rs  main.rs  shader.vert.spv  shader.wgsl  texture.rs
code/beginner/tutorial6-uniforms/: Cargo.toml  challenge.rs  main.rs  shader.frag  shader.vert
code/beginner/tutorial6-uniforms/src/: challenge.rs  lib.rs  main.rs  shader.vert  shader.vert.spv  shader.wgsl  texture.rs
code/beginner/tutorial7-instancing/: Cargo.toml  build.rs
code/beginner/tutorial7-instancing/examples/: array_instances.rs  arrays.rs  arrays.vert  naive.rs  storage.rs  storage_instances.rs  texture.rs  texture.vert  texture_instances.rs  vertex.rs  vertex.vert  vertex_instances.rs
code/beginner/tutorial7-instancing/src/: challenge.rs  challenge.vert  lib.rs  main.rs  main.rs.bak  shader.frag  shader.vert  shader.vert.spv  shader.wgsl  texture.rs
code/beginner/tutorial8-depth/: Cargo.toml  build.rs
code/beginner/tutorial8-depth/src/: challenge.frag  challenge.frag.spv  challenge.rs  challenge.vert.spv  challenge.wgsl  lib.rs  main.rs  shader.frag.spv  shader.vert  shader.vert.spv  shader.wgsl  texture.rs
code/beginner/tutorial9-models/: Cargo.toml  build.rs  index.html  server.py
code/beginner/tutorial9-models/res/: happy-cube.mtl
code/beginner/tutorial9-models/src/: lib.rs  loader.rs  main.rs  model.rs  resources.rs  shader.frag  shader.frag.spv  shader.vert  shader.wgsl  texture.rs
code/compute/: Cargo.toml
code/compute/src/: filter.rs  filter.wgsl  introduction.rs  introduction.wgsl  lib.rs  main.rs  sort-one-pass.wgsl  sort.rs  sort.wgsl  sort_even.wgsl  sort_odd.wgsl
code/md-builder/: Cargo.toml
code/md-builder/src/: main.rs
code/research/camera/: Cargo.toml
code/research/camera/src/: camera.rs  data.rs  debug.frag  debug.frag.spv  debug.vert  debug.vert.spv  default.frag  demo.rs  main.rs  pipeline.rs  resource.rs  triangle.vert.spv
code/research/performance/: Cargo.toml  build.rs
code/research/performance/src/: blit.frag  blit.frag.spv  blit.vert  blit.vert.spv  default.frag.spv  light.vert  light.vert.spv  main.rs  model.rs  pipeline.rs  texture.rs
code/showcase/alignment/: Cargo.toml
code/showcase/alignment/src/: main.rs
code/showcase/compute/: Cargo.toml  build.rs
code/showcase/compute/src/: camera.rs  light.frag  light.frag.wgsl  light.vert.spv  light.vert.wgsl  main.rs  model.rs  model_load.comp  model_load.comp.spv  model_load.comp.wgsl  pipeline.rs  shader.frag.wgsl  shader.vert  shader.vert.spv  shader.vert.wgsl  texture.rs
code/showcase/framework/: Cargo.toml  build.rs
code/showcase/framework/src/: buffer.rs  camera.rs  lib.rs  light.rs  model.rs  pipeline.rs  prelude.rs  shader_canvas.frag  shader_canvas.frag.spv  shader_canvas.frag.wgsl  shader_canvas.rs  shader_canvas.vert  shader_canvas.vert.spv  shader_canvas.vert.wgsl  texture.rs
code/showcase/framework/src/resources/: mod.rs  model.rs  texture.rs
code/showcase/gifs/: Cargo.toml  build.rs
code/showcase/gifs/src/: lib.rs  loop.rs  main.rs  shader.frag.spv  shader.wgsl
code/showcase/gifs/src/res/: shader.frag
code/showcase/imgui-demo/: Cargo.toml
code/showcase/imgui-demo/src/: main.rs
code/showcase/instancing/: Cargo.toml  build.rs
code/showcase/instancing/examples/: naive.rs  naive.vert  storage.vert  storage_instances.rs  texture_instances.rs  vertex_instances.rs
code/showcase/instancing/src/: light.vert  shader.frag  shader.frag.spv  shader.vert  shader.vert.spv  storage_buffers.rs
code/showcase/lost-window/: Cargo.toml
code/showcase/lost-window/src/: main.rs
code/showcase/mipmaps/: Cargo.toml
code/showcase/mipmaps/src/: blit.wgsl  ground.wgsl  main.rs  mipmap.wgsl  mipmapper.rs
code/showcase/mouse-picking/: Cargo.toml
code/showcase/mouse-picking/src/: camera.rs  lib.rs  light.frag.spv  light.vert.spv  main.rs  math.rs  model.rs  resources.rs  texture.rs
code/showcase/offscreen/: Cargo.toml  index.html
code/showcase/offscreen/src/: lib.rs
code/showcase/pong/: Cargo.toml  build.rs  index.html
code/showcase/pong/src/: input.rs  lib.rs  main.rs  sound.rs  state.rs  system.rs  util.rs
code/showcase/snow/: Cargo.toml
code/showcase/snow/src/: camera.rs  main.rs  snow.wgsl  snow_field.rs  snow_field.wgsl
code/showcase/stencil/: Cargo.toml
code/showcase/stencil/src/: main.rs  mask.wgsl  model.wgsl
code/showcase/threading/: Cargo.toml  index.html
code/showcase/threading/src/: camera.rs  lib.rs  main.rs  model.rs  resources.rs  shader.frag.spv  shader.vert.spv  shader.wgsl  texture.rs
code/showcase/windowless/: Cargo.toml
code/showcase/windowless/src/: main.rs  shader.wgsl
code/src/beginner/: tutorial2-swapchain.rs
code/src/beginner/tutorial3-pipeline/: main.rs  shader.vert
code/src/beginner/tutorial4-buffer/: main.rs  shader.vert
code/src/beginner/tutorial5-textures/: main.rs
code/wasm-builder/: Cargo.toml
code/wasm-builder/src/: main.rs
(+5040 files in other folders)
