[workspace]
resolver = "2"
members = [
    "code/wasm-builder",

    # beginner tutorials
    "code/beginner/*",

    # intermediate tutorials
    "code/intermediate/*",

    # showcase
    "code/showcase/*",

    "run-wasm", "demo_server",
]
exclude = [
    "code/showcase/imgui-demo",
    "code/showcase/pong",
]
