[profile.release]
strip = true

[workspace]
resolver = "2"
members = [
    "code/wasm-builder",

    # beginner tutorials
    "code/beginner/*",

    # intermediate tutorials
    "code/intermediate/*",

    # compute tutorials
    "code/compute",

    # showcase
    "code/showcase/*",

    "run-wasm", "demo_server",
]
exclude = [
    "code/showcase/imgui-demo",
    "code/showcase/pong",
    "code/showcase/mouse-picking",
]
