[package]
name = "code"
version = "0.1.0"
authors = ["Ben Hansen <bhbenjaminhansen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "tutorial1-window"
path = "src/beginner/tutorial1-window.rs"

[[bin]]
name = "tutorial2-swapchain"
path = "src/beginner/tutorial2-swapchain.rs"

[[bin]]
name = "tutorial3-pipeline"
path = "src/beginner/tutorial3-pipeline/main.rs"

[[bin]]
name = "tutorial4-buffer"
path = "src/beginner/tutorial4-buffer/main.rs"

[[bin]]
name = "windowless"
path = "src/intermediate/windowless/main.rs"

[dependencies]
image = "0.22"
raw-window-handle = "0.1"
winit = "0.20.0-alpha3"
glsl-to-spirv = "0.1"
cgmath = "0.17"

[dependencies.wgpu]
version = "0.3"
features = ["vulkan"]