[package]
name = "compute"
version = "0.1.0"
authors = ["Ben Hansen <https://github.com/sotrh>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["introduction", "sort"]
introduction = []
sort = []

[dependencies]
anyhow = "1.0.99"
bytemuck = "1.23.2"
glam = "0.30.5"
log = "0.4.28"
pollster = "0.4.0"
wgpu = "26.0.1"
env_logger = "0.11.8"
crossbeam = "0.8.4"
flume = "0.11.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "26.0.1", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3.69", features = [
    "Document",
    "Window",
    "Element",
]}
