[package]
name = "wasm-builder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
log = "0.4"
env_logger = "0.10"
rayon = "1"
serde = { version = "1", features = ["derive"]}
serde_json = "1"
wasm-bindgen-cli-support = "0.2.90"