[package]
name = "tutorial2-swapchain"
version = "0.1.0"
authors = ["Ben Hansen <bhbenjaminhansen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.22"
winit = "0.20"
shaderc = "0.6"
cgmath = "0.17"
wgpu = "0.5.0"
futures = "0.3.4"

[[bin]]
name = "tutorial2-swapchain"
path = "src/main.rs"

[[bin]]
name = "tutorial2-challenge"
path = "src/challenge.rs"
