[package]
name = "tutorial2-swapchain"
version = "0.1.0"
authors = ["Ben Hansen <bhbenjaminhansen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23"
winit = "0.24"
shaderc = "0.7"
cgmath = "0.18"
env_logger = "0.8"
log = "0.4"
wgpu = "0.8"
futures = "0.3"


[[bin]]
name = "tutorial2-swapchain"
path = "src/main.rs"

[[bin]]
name = "tutorial2-challenge"
path = "src/challenge.rs"
