[package]
name = "tutorial2-swapchain"
version = "0.1.0"
authors = ["Ben Hansen <bhbenjaminhansen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23"
winit = "0.25"
cgmath = "0.18"
env_logger = "0.9"
log = "0.4"
wgpu = "0.9"
pollster = "0.2"


[[bin]]
name = "tutorial2-swapchain"
path = "src/main.rs"

[[bin]]
name = "tutorial2-challenge"
path = "src/challenge.rs"
