[package]
name = "tutorial3-pipeline"
version = "0.1.0"
authors = ["Ben Hansen <bhbenjaminhansen@gmail.com>"]
edition = "2018"

[dependencies]
image = "0.23"
winit = "0.26"
cgmath = "0.18"
env_logger = "0.9"
log = "0.4"
wgpu = "0.12"
pollster = "0.2"

# NEW!
[build-dependencies]
glob = "0.3"
fs_extra = "1.2"
anyhow = "1.0"

[[bin]]
name = "tutorial3-pipeline"
path = "src/main.rs"

[[bin]]
name = "tutorial3-challenge"
path = "src/challenge.rs"
