[package]
name = "tutorial4-buffer"
version = "0.1.0"
authors = ["Ben Hansen <bhbenjaminhansen@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
cfg-if = "1"
winit = "0.27"
wgpu = "0.14"
env_logger = "0.9"
log = "0.4"
pollster = "0.2"
# NEW!
bytemuck = { version = "1.4", features = [ "derive" ] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
console_log = "0.2"
wgpu = { version = "0.14", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"

[[bin]]
name = "tutorial4-buffer"
path = "src/main.rs"

[[bin]]
name = "tutorial4-challenge"
path = "src/challenge.rs"
