[package]
name = "tutorial4-buffer"
version = "0.1.0"
authors = ["Ben Hansen <https://github.com/sotrh>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
anyhow = "1.0"
winit = { version = "0.30", features = ["android-native-activity"] }
wgpu = "28.0"
env_logger = "0.10"
log = "0.4"
pollster = "0.3"
# NEW!
bytemuck = { version = "1.24", features = [ "derive" ] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
console_log = "1.0"
wgpu = { version = "28.0", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"

[[bin]]
name = "tutorial4-buffer"
path = "src/main.rs"

[[bin]]
name = "tutorial4-challenge"
path = "src/challenge.rs"
