[package]
name = "tutorial6-uniforms"
version = "0.1.0"
authors = ["Ben Hansen <bhbenjaminhansen@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
bytemuck = { version = "1.4", features = [ "derive" ] }
cgmath = "0.18"
env_logger = "0.8"
log = "0.4"
futures = "0.3"
image = "0.23"
wgpu = "0.9"
winit = "0.25"

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"

[[bin]]
name = "tutorial6-uniforms"
path = "src/main.rs"


[[bin]]
name = "tutorial6-challenge"
path = "src/challenge.rs"