[package]
name = "tutorial7-instancing"
version = "0.1.0"
authors = ["Ben Hansen <bhbenjaminhansen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.4"
winit = "0.22.1"
shaderc = "0.6"
cgmath = "0.17"
failure = "0.1"
wgpu = "0.5.0"
futures = "0.3.4"
bytemuck = "1.2.0"

[[bin]]
name = "tutorial7-instancing"
path = "src/main.rs"


[[bin]]
name = "tutorial7-challenge"
path = "src/challenge.rs"