[package]
name = "tutorial7-instancing"
version = "0.1.0"
authors = ["Ben Hansen <bhbenjaminhansen@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
bytemuck = { version = "1.4", features = [ "derive" ] }
cgmath = "0.18"
env_logger = "0.8"
log = "0.4"
futures = "0.3"
image = "0.23"
wgpu = "0.8"
winit = "0.24"

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"

[[bin]]
name = "tutorial7-instancing"
path = "src/main.rs"


[[bin]]
name = "tutorial7-challenge"
path = "src/challenge.rs"