[package]
name = "tutorial8-depth"
version = "0.1.0"
authors = ["Ben Hansen <bhbenjaminhansen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23"
winit = "0.22"
shaderc = "0.6"
cgmath = "0.17"
failure = "0.1"
tobj = "1.0.0"
bytemuck = "1.2"
futures = "0.3.4"
wgpu = "0.5.0"

[[bin]]
name = "tutorial8-depth"
path = "src/main.rs"


[[bin]]
name = "tutorial8-challenge"
path = "src/challenge.rs"

