[package]
name = "tutorial8-depth"
version = "0.1.0"
authors = ["Ben Hansen <bhbenjaminhansen@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
bytemuck = "1.4"
cgmath = "0.17"
env_logger = "0.7"
futures = "0.3"
image = "0.23"
log = "0.4"
wgpu = "0.6"
winit = "0.22"

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"
shaderc = "0.6"

[[bin]]
name = "tutorial8-depth"
path = "src/main.rs"


[[bin]]
name = "tutorial8-challenge"
path = "src/challenge.rs"

