[package]
name = "compute-old"
version = "0.1.0"
authors = ["Ben Hansen <https://github.com/sotrh>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
bytemuck = { version = "1.4", features = ["derive"]}
cgmath = "0.18"
env_logger = "0.10"
pollster = "0.3"
image = "0.24"
log = "0.4"
rayon = "1.4"
tobj = "2.0"
wgpu = "28.0"
winit = { version = "0.30", features = ["android-native-activity"] }
instant = "0.1.13"

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"
rayon = "1.4"
naga = { version = "28.0", features = ["glsl-in", "spv-out", "wgsl-out"]}
