[package]
name = "framework"
version = "0.1.0"
authors = ["Ben Hansen <https://github.com/sotrh>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
bytemuck = { version = "1.24", features = [ "derive" ] }
cgmath = "0.18"
env_logger = "0.10"
pollster = "0.3"
image = "0.24.2"
log = "0.4"
tobj = "2.0"
wgpu = "27.0.0"
wgpu-subscriber = "0.1"
winit = { version = "0.30", features = ["android-native-activity"] }

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"
naga = { version = "27.0", features = ["glsl-in", "spv-out", "wgsl-out"]}
rayon = "1.5"
