[package]
name = "framework"
version = "0.1.0"
authors = ["Ben Hansen <https://github.com/sotrh>"]
edition = "2018"

[dependencies]
thiserror = "1.0"
bytemuck = { version = "1.24", features = [ "derive" ] }
cgmath = "0.18"
wgpu-subscriber = "0.1"

env_logger.workspace = true
pollster.workspace = true
image.workspace = true
log.workspace = true
tobj.workspace = true
wgpu.workspace = true
anyhow.workspace = true
glam.workspace = true
winit.workspace = true

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"
naga = { version = "28.0", features = ["glsl-in", "spv-out", "wgsl-out"]}
rayon = "1.5"
