[package]
name = "gifs"
version = "0.1.0"
authors = ["Ben Hansen <bhbenjaminhansen@gmail.com>"]
edition = "2018"


[dependencies]
anyhow = "1.0"
bytemuck = { version = "1.4", features = [ "derive" ] }
cgmath = "0.18"
env_logger = "0.8"
pollster = "0.2"
image = "0.23"
log = "0.4"
tobj = "2.0"
wgpu = "0.9"
winit = "0.25"
gif = "0.10.3"

framework = { version = "0.1.0", path = "../framework" }

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"
shaderc = "0.7"