[package]
name = "imgui-demo"
version = "0.1.0"
authors = ["Ben Hansen <bhbenjaminhansen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
wgpu = "0.7"
futures = "0.3"
imgui = "0.6"
imgui-wgpu = "0.12"
imgui-winit-support = "0.6"
framework = { path = "../framework" }