[package]
name = "imgui-demo"
version = "0.1.0"
authors = ["Ben Hansen <bhbenjaminhansen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
wgpu = "0.11"
pollster = "0.2"
imgui = "0.7"
imgui-wgpu = "0.17"
imgui-winit-support = "0.7"
framework = { path = "../framework" }