[package]
name = "imgui-demo"
version = "0.1.0"
authors = ["Ben Hansen <https://github.com/sotrh>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
wgpu = "26.0.1"
pollster = "0.3"
imgui = "0.7"
imgui-wgpu = "26.0.1"
imgui-winit-support = "0.7"
framework = { path = "../framework" }