[package]
name = "instancing"
version = "0.1.0"
authors = ["Ben Hansen <bhbenjaminhansen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bytemuck = "1.3"
image = "0.23"
framework = { path = "../framework"}
futures = "0.3"
rand = "0.7"
tobj = "2"
winit = "0.22"
wgpu = "0.5"

[dependencies.cgmath]
version = "0.17"
features = ["swizzle"]

[build-dependencies]
failure = "0.1"
fs_extra = "1.1"
glob = "0.3"
shaderc = "0.6"

[[bin]]
name = "instancing-storage-buffers"
path = "src/storage_buffers.rs"