[package]
name = "mipmaps"
version = "0.1.0"
edition = "2024"

[dependencies]
framework = { version = "0.1.0", path = "../framework" }

anyhow.workspace = true
bytemuck.workspace = true
glam.workspace = true
rand.workspace = true
wgpu.workspace = true
winit.workspace = true
log.workspace = true
image.workspace = true