[package]
name = "offscreen"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3.80"
wasm-bindgen = "0.2.103"
wasm-bindgen-futures = "0.4.53"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "Location",
    "OffscreenCanvas",
    "HtmlCanvasElement",
    "Worker",
    "Blob",
    "BlobPropertyBag",
    "Url",
    "DedicatedWorkerGlobalScope"
] }
wgpu = "26.0.1"
