[package]
name = "pong"
version = "0.1.0"
authors = ["Ben Hansen <bhbenjaminhansen@gmail.com>"]
edition = "2018"

[dependencies]
winit = "0.25"
anyhow = "1.0"
bytemuck = { version = "1.4", features = [ "derive" ] }
cgmath = "0.18"
pollster = "0.2"
wgpu = { version = "0.11", features = ["spirv"]}
wgpu_glyph = "0.15"
rand = "0.8"
rodio = { version = "0.14", default-features = false, features = ["wav"] }
log = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "0.2.0"
getrandom = { version = "0.2", features = ["js"] }
rodio = { version = "0.14", default-features = false, features = ["wasm-bindgen", "wav"] }
wasm-bindgen = "0.2.76"
wasm-bindgen-futures = "0.4.20"
web-sys = { version = "0.3.53", features = [
    "Document",
    "Window",
    "Element",
]}
winit = { version = "0.25", features = ["web-sys"] }
wgpu = { version = "0.11", features = ["spirv", "webgl"]}

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"
rayon = "1.4"
naga = { version = "0.7", features = ["glsl-in", "spv-out", "wgsl-out"]}
