[package]
name = "snow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
framework = { path = "../framework" }
anyhow.workspace = true
bytemuck.workspace = true
glam.workspace = true
pollster.workspace = true
wgpu.workspace = true
winit.workspace = true
